Fixed spacing and added hover animations to buttons.

--- a/frontend/src/Player.css
+++ b/frontend/src/Player.css
@@ -1,38 +1,117 @@
-.buttonBefore {
-  background-color: white; /* Red */
+.likeButtonBefore {
+  display: flex;
+  align-items: center;
+  background-color: white;
   border: none;
   color: black;
   padding: 15px 32px;
-  text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   border-radius: 10px;
   border: 3px solid black;
+  margin: 10px;
   }
 
-.likeButton {
-  background-color: green; /* Red */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 10px;
-  }
-
-.dislikeButton {
-    background-color: #af4c4c; /* Red */
+.likeButtonBefore:hover {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: green;
     border: none;
     color: white;
     padding: 15px 32px;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     border-radius: 10px;
+    border: 3px solid white;
+    margin: 10px;
+  }
+
+.dislikeButtonBefore {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 10px;
+  }
+
+.dislikeButtonBefore:hover {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 3px solid white;
+    margin: 10px;
+  }
+
+.likeButton {
+  display: flex;
+  align-items: center;
+  background-color: green;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 3px solid white;
+  margin: 10px;
+  }
+
+.likeButton:hover {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 10px;
+  }
+
+.dislikeButton {
+  display: flex;
+  align-items: center;
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 3px solid white;
+  margin: 10px;
+  }
+
+.dislikeButton:hover {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 10px;
   }
 
 .container {
@@ -43,8 +122,7 @@
 .comment {
     background-color: white;
     border: 1px solid black;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 1%;
     overflow-wrap: break-word;
 }
 
@@ -52,7 +130,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* border: 3px solid green; */
     padding-top: 20px;
     padding-left: 20px;
     width: 50%
@@ -66,7 +143,6 @@
 .popularity {
     flex: 1;
     display: flex;
-    /* border: 3px solid pink; */
     padding-left: 20px;
     align-items: center;
 }
@@ -74,9 +150,8 @@
 .feedback {
     display: flex;
     flex-direction: column;
-    /* border: 3px solid blue; */
-    padding-left: 20px;
-    padding-right: 40px;
+    padding: 20px;
+    padding-top: 0;
     flex-basis: 100%;
 }
 
@@ -89,22 +164,21 @@
 }
 
 .titleViewCount {
-  flex: 4
+  flex: 4;
 }
 
 .ratings {
   flex: 3;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding-right: 10px;
+  padding-top: 20px;
 }
 
 .ratingButtons {
+  margin: 0;
   display: flex;
-  width: 75%;
-  justify-content: space-between;
+  width: 100%;
 }
 
 .commentHeader {
@@ -112,31 +186,41 @@
 }
 
 .submitButtonDiv{
-  height: 50px;
+  float: right;
   padding: 10px;
 }
 
 .submitButton{
-  height: 100%;
   width: 30%;
+  height: 50px;
   float: right;
   font-size: 20px;
   border-radius: 10px;
   background-color: greenyellow;
 }
 
-.buttonBefore:hover{
+.submitButton:hover {
   cursor: pointer;
+  width: 30%;
+  height: 50px;
+  float: right;
+  font-size: 20px;
+  border-radius: 10px;
+  background-color: turquoise;
 }
 
-.likeButton:hover{
-  cursor: pointer;
+.commentInput {
+  margin-top: 10px;
 }
 
-.dislikeButton:hover{
-  cursor: pointer;
+.ratingText {
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
-.submitButton:hover{
-  cursor: pointer;
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
